add components basics

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -53,3 +53,13 @@ $--shadow-1: 1px 1px 5px 0 rgba(1, 1, 1, 0.05);
 $--shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 $--shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 $--shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+
+/* ancho */
+$--container: 1200px;
+
+/* responsive design */
+$size-sm: 540px;
+$size-md: 768px;
+$size-lg: 1024px;
+$size-xl: 1280px;
+$size-2xl: 1536px;
