--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,8 @@
 @import "variables";
 
 @import "globals";
+@import "components/card";
+@import "components/container";
+@import "components/button";
+@import "grid/grid";
 @import "home";
