--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,6 +22,17 @@ $--clr-primary-7: #901c38;
 $--clr-primary-8: #601226;
 $--clr-primary-9: #300913;
 
+$--clr-secondary-1: #fceef1;
+$--clr-secondary-2: #f9abbf;
+$--clr-secondary-3: #f6829e;
+$--clr-secondary-4: #f3587e;
+$--clr-secondary-5: #f02e5e;
+$--clr-secondary-6: #c0254b;
+$--clr-secondary-7: #901c38;
+$--clr-secondary-8: #601226;
+$--clr-secondary-9: #300913;
+
+
 $--clr-white: #ffffff;
 $--clr-blue-dark: #2c7aad;
 $--clr-red: #e9595b;
