--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,5 +4,7 @@
 @import "components/card";
 @import "components/container";
 @import "components/button";
+@import "components/fonts";
+@import "components/colors";
 @import "grid/grid";
-@import "home";
+@import "grid/section";
