--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -10,3 +10,31 @@
   padding: 0 40px;
   margin: 20px auto;
 }
+
+
+$paddings: 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20;
+@each $padding in $paddings {
+  .p-#{$padding} {
+    padding: $padding * 0.25rem;
+  }
+  .px-#{$padding} {
+    padding-left: $padding * 0.25rem;
+    padding-right: $padding * 0.25rem;
+  }
+  .py-#{$padding} {
+    padding-top: $padding * 0.25rem;
+    padding-bottom: $padding * 0.25rem;
+  }
+  .pl-#{$padding} {
+    padding-left: $padding * 0.25rem;
+  }
+  .pr-#{$padding} {
+    padding-right: $padding * 0.25rem;
+  }
+  .pt-#{$padding} {
+    padding-top: $padding * 0.25rem;
+  }
+  .pb-#{$padding} {
+    padding-bottom: $padding * 0.25rem;
+  }
+}
